web/css/main.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
footer {
    background-color:#0c0d0e; font-family: 'Open Sans', sans-serif;
    position: relative; bottom: 0;
}
footer .container { width: 100%; max-width: none; overflow: auto; }
footer .container .row { padding-bottom: 0; margin-bottom: 0; }
.copyright .container { padding-left: 0; width: 100% }
.footerleft { margin-top:20px; padding:0 0 0 36px; }
.logofooter { margin-bottom:10px; font-size:25px; color:#fff; font-weight:700;}

.footerleft p { color:#fff; font-size:12px !important; font-family: 'Open Sans', sans-serif; margin-bottom:15px;}
.footerleft p i { width:20px; color:#999;}


.paddingtop-bottom {  padding-top:20px;}
.footer-ul { list-style-type:none;  padding-left:0px; margin-left:2px;}
.footer-ul li { line-height:29px; font-size:12px;}
.footer-ul li a { color:#a0a3a4; transition: color 0.2s linear 0s, background 0.2s linear 0s; }
.footer-ul i { margin-right:10px;}
.footer-ul li a:hover {transition: color 0.2s linear 0s, background 0.2s linear 0s; color:#ff670f; }

.icon.fa:hover, .img-supinfo:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -o-transform: scale(1.1);
    opacity: 0.7;
}



.icon-ul { list-style-type:none !important; margin:0px; padding:0px;}
.icon-ul li { line-height:75px; width:100%; float:left;}
.icon { float:left; margin-right:5px;}


.copyright { min-height:40px; background-color:#000000;}
.copyright p { text-align:left; color:#FFF; padding:10px 0; margin-bottom:0px;}
.heading7 { font-size:21px; font-weight:700; color:#d9d6d6; margin-bottom:22px;}
.post p { font-size:12px; color:#FFF; line-height:20px;}
.post p span { display:block; color:#8f8f8f;}
.bottom_ul { list-style-type:none; float:right; margin-bottom:0px;}
.bottom_ul li { float:left; line-height:40px;}
.bottom_ul li:after { content:"/"; color:#FFF; margin-right:8px; margin-left:8px;}
.bottom_ul li a { color:#FFF;  font-size:12px;}
/*
-------------------------------------------------- */
/* Style all font awesome icons */
ul .fa, .icon.fa {
    /*padding: 8px;*/
    /*width: 50px;*/
    /*font: normal normal normal 36px/1 FontAwesome;*/
    padding: 4px;
    margin: 5px 3px;
    width: 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font: normal normal normal 24px/1 FontAwesome;
}
/* Facebook */
.footer-ul li a.fa-facebook, .icon.fa-facebook, .fa-facebook {
    background: #3B5998;
    color: white;
}
.footer-ul li a.fa-linkedin, .icon.fa-linkedin, .fa-linkedin {
    background: #007bb5;
    color: white;
}
.footer-ul li a.fa-github, .icon.fa-github, .fa-github {
    background: #e2e2e2;
    color: black;
}
.footer-ul li a.fa-viadeo, .icon.fa-viadeo, .fa-viadeo {
    background: #e2e2e2;
    color: #f07355;
}
.img-supinfo {
    padding: 5px;
    padding-left: 3px;
}

body {
    padding: 0px;
    padding-top: 65px;
}

.title-head {
    font-size: 35px;
    color: #44968f;
    font-family: fantasy;
    padding: 0 5px;
    text-transform: uppercase;
    width: 240px;
    display: block;
    text-align: center;
    border-right: solid 1px #272b30;
}
.title-head img {
    max-height: 30px;
    margin-right: 10px;
    vertical-align: -1px;
}

#menu #slide-out {
    margin-top: 65px;
    width: 240px;
    max-width: 240px;
    overflow: hidden;
    height: calc(100% - 65px);
    background-color: #272b30;
    padding: 0 5px;
}
#menu #slide-out:hover {
    overflow: overlay;
}
.button-collapse {
    display: none;
}

.dropdown-content {
    background-color: #272b30;
    transition: none;
}
.dropdown-content a:hover, .dropdown-content li:hover {
    color: #967d44;
    background-color: #3d4248;
    transition: none;
    text-decoration: none;
}

.dropdown-button i {
    padding: 0 10px;
    float: right;
}

.dropdown-button {
    border-left: solid 1px #272b30;
}

.dropdown-button:hover {
    text-decoration: none;
    color: #c8c8c8;
}

.dropdown-button:focus,.dropdown-button:active {
    text-decoration: none;
}

.user-dropdown {
    color: #c0cadd;
    background-color: #585e65;
}

header, main, .copyright, .container {
    padding-left: 255px;
}

@media only screen and (max-width : 992px) {
    header, main, .copyright, .container {
        padding-left: 15px;
    }
    .button-collapse {
        display: initial;
        padding-right: 18px;
        border-right: solid 1px #272b30;
    }
    .title-head {
        border-right: none;
    }
}

.menu-span {
    text-align: center;
    margin: 5px 0 5px 0;
    text-transform: uppercase;
    font-size: 10px;
    color: #c0cadd;
    font-weight: bold;
    font-family: 'Open Sans','Verdana';
    text-align: center;
}
ul.nav li a {
    color: #44968f;
    font-family: fantasy;
    text-transform: uppercase;
    vertical-align: middle;
    padding: 0 15px;
}

ul.nav li a:hover {
    color: #967d44;
}

input[type="checkbox"]:not(:checked), input[type="checkbox"]:checked {
    opacity: 1;
}

input.form-control {
    color: #c0cadd;
}
input.form-control:focus {
    color: #00a29b;
}

select.form-control, textarea.form-control {
    background-color: #272b30;
    color: #c0cadd;
}
select.form-control:focus, textarea.form-control:focus {
    color: #00a29b;
    border-color: #00a29b;
}

.collection .collection-item.avatar {
    min-height: 65px;
    background-color: #33373c;
}

.well.title-page {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    font-family: 'Open Sans','Verdana';
    font-size: 25px;
}

.img-advert-170px {
    height: 170px;
}

.imgadvert {
    float: left;
    margin: 10px;
}

.container .btn, .container .btn i, i {
    display: inline-flex;
    vertical-align: middle;
    margin: 0 5px 0 0;
}

.detailAdvert {
    overflow: hidden;
    margin-top: 10px;
}

#menu {
    padding-right: 0;
    min-width: 200px;
}

.notif-number {
    background-color: #fa3e3e;
    text-align: center;
    color: #fff;
    padding: 1px 3px;
    border-radius: 2px;
    display: inline-block;
    font-size: 12px;
    line-height: 1.3;
    min-height: 13px;
    min-width: 15px;
    position: absolute;
    top: 0;
    right: 0;
}

#menu hr {
    margin: 10px;
}

#menu i {
    margin: 0px 22px 0 0;
    color: rgba(230, 100, 100, 0.54);
}

.pagination {
    margin: 0;
}
.pagination li a {
    color: #FFF;
}

.brand-logo:hover, .brand-logo:active, .brand-logo:focus {
    text-decoration: none;
}

table.table.table-user-information {
    margin: 0;
}
.collection li.collection-item.avatar {
    padding-left: 85px;
}
.collection-item .img-rounded, .img-rounded.small-pics {
    max-width: 70px;
    height: 42px;
    overflow: hidden;
    vertical-align: middle;
}
.collection-item .img-rounded {
    position: absolute;
    left: 15px;
    display: inline-block;
}

.file-field .vich-file {
    opacity: 0;
    width: 0px;
}

#delete_img {
    position: absolute;
    top: 5px;
    left: 20px;
    opacity: 0.5;
}

.collapsible, .collapsible-header, .collapsible-body {
    border-color: #272b30;
}

.collapsible-header {
    background-color: #1c1e22;
}

.collapsible-body table tr {
    vertical-align: middle;
    border-bottom: solid 1px #1c1e22;
}

.collection, .collection .collection-item.avatar {
    border-color: #000000;
    background-color: #1c1e22;
}

